# Legal-Document-Analyzer

./: .gitignore  .replit  README.md  app.py  config.py  forms.py  main.py  minimal_app.py  models.py  new_workflow.sh  project_requirements.txt  pyproject.toml  replit.nix  routes.py  start.sh
api/: __init__.py  auth.py  briefs.py  documents.py  documents.py.backup  integrations.py  knowledge.py  ml.py  statutes.py
attached_assets/: Pasted-Architecture-Overview-LegalDataInsights-is-designed-as-a-modern-scalable-application-with-a-micros-1743275548763.txt  Pasted-Error-generating-brief-Failed-to-generate-brief-Database-error-psycopg2-errors-UndefinedColumn--1743553184909.txt
data_pipeline/: __init__.py  base.py  config.py
instance/: legal_analyzer.db
integrations/: __init__.py  airtable.py  airtable_integration.py  base.py  box_integration.py  dropbox_integration.py  factory.py  google_drive.py  google_drive_integration.py  msgraph_integration.py
migrations/: add_enhanced_summary_columns.py  add_google_credentials_table.py  airtable_token_migration.py  brief_columns_migration.py  brief_enhanced_summary_migration.py
ml_layer/: __init__.py  config.py
plugins/: __init__.py
sample_documents/: sample_legal_brief.txt
services/: __init__.py  brief_generator.py  document_parser.py  email_service.py  integration_service.py  knowledge_service.py  ml_service.py  onboarding_service.py  openai_brief.py  openai_document.py  openai_service.py  pdf_service.py  statute_validator.py  text_analysis.py
templates/: 404.html  500.html  api_docs.html  api_settings.html  (+15 more)
(+56 files in other folders)
